# const_shader_layout

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml
derive/: Cargo.toml  README.md
derive/src/: lib.rs
src/: compat.rs  glam.rs  half.rs  internal.rs  lib.rs  primitive.rs  standard.rs
tests/: Cargo.toml  compile.rs  simple.rs
tests/compile_fail/: array_align_compat.rs  array_align_compat.stderr  custom_impl_array.rs  custom_impl_array.stderr  custom_impl_compat.rs  custom_impl_compat.stderr  custom_impl_layout.rs  custom_impl_layout.stderr  derive_layout.rs  derive_layout.stderr  offset_unaligned.rs  offset_unaligned.stderr  struct_align_compat.rs  struct_align_compat.stderr  struct_size_unaligned.rs  struct_size_unaligned.stderr  vec3_array.rs  vec3_array.stderr
tests/compile_pass/: all_type_arrays.rs  all_types.rs  custom_impl_compat.rs  custom_impl_layout.rs  derive_layout.rs  offset_aligned.rs  struct_size_aligned.rs
tests/tests/: ui.rs
