[package]
name = "const_shader_layout"
version = "0.2.1"
edition = "2024"
description = "Compile-time checks for whether structs conform to WGSL's memory layout rules"
repository = "https://github.com/beicause/const_shader_layout"
license = "MIT OR Apache-2.0"
keywords = ["const", "macro", "shader", "wgsl"]
exclude = [".github"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
no-default-features = true
features = [
  "glam",
  "half",
  "std",
]
rustdoc-args = ["--cfg", "docsrs"]

[[test]]
name = "compile"
path = "tests/compile.rs"
harness = false
required-features = ["glam", "half", "std"]

[dependencies]
glam = {
  version = "0.33",
  default-features = false,
  features = ["i16", "i32", "u16", "u32"],
  optional = true
}
half = { version = "2", default-features = false, optional = true }

[dev-dependencies]
half = "2"
ui_test = "0.30.7"

[features]
default = ["glam", "std"]

# Implements `ShaderLayout` for `glam`(latest) types. Overrides other `glam_*` features.
glam = ["dep:glam"]

# Implements `ShaderLayout` for `half::f16`.
half = ["dep:half"]

# Reexports `glam`'s `libm` feature.
libm = ["glam?/libm"]

# Reexports `glam`'s `nostd-libm` feature.
nostd-libm = ["glam?/nostd-libm"]

# Reexports `glam`'s `std` feature.
std = ["glam?/std"]

[lints.clippy]
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
