[package]
name = "const_shader_layout_ui_test"
edition = "2024"
publish = false

[[test]]
harness = false
name = "ui"

[dependencies]
const_shader_layout = {
  path = "..",
  features = ["derive", "glam", "half", "std"]
}
glam = {
  version = "0.33",
  default-features = false,
  features = ["i16", "i32", "std", "u16", "u32"],
}
half = { version = "2", default-features = false }

[dev-dependencies]
ui_test = "0.30.7"
